@@ -217,6 +217,12 @@ Gnubiff_Options::add_options_general (void)
 		"Shall options be displayed in the expert dialog that cannot be "
 		"changed?",
 								 true));
+	// EXPERT_SEARCH_VALUES
+	add_option (new Option_Bool ("expert_search_values", OPTGRP_GENERAL,
+		"When searching for options that contain a given string, examine "
+		"option name and value if this option is true, otherwise examine "
+		"only the option name?",
+								 false));
 }
 
 void 
